<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/navigation_bar_home"/>
        <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_store_black_24dp"
                android:title="@string/navigation_bar_shop"/>
        <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_event_black_24dp"
                android:title="@string/navigation_bar_events"/>

        <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Informations"/>

        <item android:title="@string/navigation_bar_other_infos"
              android:checkable="true">
            <menu>
                <item
                        android:id="@+id/nav_share"
                        android:icon="@drawable/ic_menu_share"
                        android:title="Twitter" android:checkable="true"/>
                <item
                        android:id="@+id/nav_maps"
                        android:icon="@drawable/ic_map_black_24dp"
                        android:title="@string/navigation_bar_maps" android:checkable="true"/>

                <item android:id="@+id/nav_weather"
                      android:icon="@drawable/ic_wb_sunny_black_24dp"
                      android:title="@string/navigation_bar_weather" android:checkable="true"/>
            </menu>

        </item>

    </group>

</menu>
